--- a/src/css/components/app.scss
+++ b/src/css/components/app.scss
@@ -1,3 +1,8 @@
-h1 {
-  color: blue;
+body {
+  margin: 0;
+  padding: 20px;
+  font-family: 'Raleway', sans-serif;
+  background-color: darken($dark, 4%);
+  color: $white;
+  font-weight: 200;
 }
