--- a/src/css/imports/global.scss
+++ b/src/css/imports/global.scss
@@ -1,11 +1,10 @@
 body {
     margin: 0;
-    padding: 0;
+    padding: 5%;
     box-sizing: content-box;
-    color: white;
+    color: $black;
     font-family: 'museo sans';
     font-size: 9pt;
-    background-color: $black;
     -webkit-tap-highlight-color: transparent;
 }
 
