--- a/src/css/imports/variables.scss
+++ b/src/css/imports/variables.scss
@@ -1,3 +1,8 @@
-$blue:       #4d7fb5;
-$black:      #252525;
+$red:       #c31e1e;
+$yellow:    #efa926;
+$brown:     #4a340a;
+$green:     #109c36;
+$orange:    #ea8605;
+$blue:      #4d7fb5;
+$black:     #252525;
 $transition: 0.2s;
